==> Ahoher/DualLightCam/0V7670-STM32-Demo-main - 副本 (18)/0V7670-STM32-Demo-main - 副本 (18)/0V7670-STM32-Demo-main/Hardware/SDdriver/SDdriver.c <==
#include "SDdriver.h"
#include "ff.h"
#include "stm32f10x_spi.h"
#include "Delay.h"

void SD_CS(uint8_t p){
	if(p==0){
		GPIO_SetBits(SD_CS_GPIO_Port, SD_CS_Pin);  // CS = HIGH (Release)
		}else{
		GPIO_ResetBits(SD_CS_GPIO_Port, SD_CS_Pin); // CS = LOW (Select)
		}
}

uint8_t spi_readwrite(uint8_t Txdata)
{
	// Wait for transmit buffer empty
	while(SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_TXE) == RESET);

	// Send data
	SPI_I2S_SendData(SPI1, Txdata);

	// Wait for receive buffer not empty
	while(SPI_I2S_GetFlagStatus(SPI1, SPI_I2S_FLAG_RXNE) == RESET);

	// Return received data
	return SPI_I2S_ReceiveData(SPI1);
}
